       the bottom. (Stefan)
- NEW: Marking multiple files as resolved at once. Selecting a folder
       will show a dialog with all conflicted files below to be marked
       as resolved. See issue #117. (Stefan)
- NEW: SubWCRev has a new option '-e' to include externals if they're from
       the same repository. See issue #132. (Stefan)
- CHG: The spellchecker now checks text pasted in the edit control
       immediately, without the need to enter text manually first.
       See issue #116. (Stefan)
- BUG: The default ssh client (TortoisePlink) wasn't used in some
       places, e.g. the revision graph. (Stefan)
- BUG: The option "Only use spellchecker when tsvn:projectlanguage is set"
       was inversed. (Stefan)
- BUG: The bugtraq: and tsvn: property values weren't correctly handled if
       they contained non-ASCII chars. (Stefan)
- BUG: Comparing two files from the revision graph didn't work. (Stefan)
- BUG: When adding a folder, nested folders were shown as unversioned
       and checked to add. (Stefan)

Version 1.2.1
- NEW: The path of the working copy is shown in the dialog title for
       "check for modifications" and commit dialog. See Issue 98. (Stefan)
- NEW: Diffing files against their BASE improved. See Issue #94. (Stefan)
- NEW: 'Open with...' command in the commit dialog. (Stefan)
- NEW: Columns in the log dialog can be sorted. (Boris)
- NEW: Files dragged from the explorer to the repository browser will
       add them to the repository. (Stefan)
- NEW: Renaming in the repository browser now happens inline. (Stefan)
- NEW: Words which are in the autocompletion list aren't spell checked
       anymore. See issue #102. (Stefan)
- NEW: "explore to" context menu command in the commit dialog.
       See issue #105. (Stefan)
- NEW: Option to make the "Check for modifications" dialog contact
       the repository the first time. See issue #107. (Stefan)
- NEW: The last used setting for "Stop on copy/rename" in the log dialog